# tasks

./: .travis.yml  CodeExamples.cpp  README.md  travis.txt
lesson1cmake/: .travis.yml  CMakeLists.txt  Readme.md  lib.cpp  lib.h  test_main.cpp  version.h.in
lesson2_bin_id/: .travis.yml  CMakeLists.txt  Readme.md  bin_id.cpp  lib.cpp  lib.h  test_main.cpp
lesson2_bin_id/src/: bin_id.cpp
lesson2_bin_id/tests/: test_bin_id.cpp
lesson2ipfilter/: .travis.yml  CMakeLists.txt  Readme.md  ipfilter.cpp  test_bin_func  test_bin_id.cpp
lesson2ipfilter/src/: filter_func.cpp  ipfilter.cpp  lib.cpp  utils.h
lesson2ipfilter/tests/: test_bin_id.cpp  test_functions.cpp
lesson3_allocator/: .travis.yml  CMakeLists.txt
lesson3_allocator/src/: allocator.cpp  allocator.h  arena.cpp  forward_list.cpp  forward_list.h  main.cpp
lesson4_print_ip/: .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  print_ip  print_ip-0.0.106-Linux.deb  print_ip-0.0.108-Linux.deb
lesson4_print_ip/Testing/Temporary/: CTestCostData.txt
lesson4_print_ip/_CPack_Packages/Linux/DEB/print_ip-0.0.106-Linux/: control  md5sums
lesson4_print_ip/_CPack_Packages/Linux/DEB/print_ip-0.0.108-Linux/: control  md5sums
lesson4_print_ip/html/: annotated.html  classes.html  dir_000001_000000.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  is__container_8h.html  is__container_8h__dep__incl.map  is__container_8h__dep__incl.md5  is__container_8h__incl.map  is__container_8h__incl.md5  is__container_8h_source.html  is__container_8test_8cpp.html  is__container_8test_8cpp__incl.map  is__container_8test_8cpp__incl.md5  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  namespaceis__stl__container__impl.html  namespaces.html  print__ip_8h.html  print__ip_8h__dep__incl.map  print__ip_8h__dep__incl.md5  print__ip_8h__incl.map  print__ip_8h__incl.md5  print__ip_8h_source.html  (+25 more)
lesson4_print_ip/html/search/: all_0.js  all_1.js  all_3.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  functions_2.js  search.js  typedefs_0.js
lesson4_print_ip/src/: is_container.h  main.cpp  print_ip.h
lesson4_print_ip/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  is_container.test.cpp  is_containter_test  print_ip.test.cpp  print_ip_test
olympiad_tasks/: 1000.cpp  1001.cpp  1068.cpp  1100.cpp  1196.cpp  1197.cpp  1209.cpp  1225.cpp  1243.cpp  1263.cpp  1264.cpp  1293.cpp  1313.cpp  1319.cpp  1327.cpp  1409.cpp  1493.cpp  1496.cpp  1545.cpp  1567.cpp  1581.cpp  1585.cpp  1607.cpp  1639.cpp  1785.cpp  1787.cpp  1820.cpp  1837.cpp  1876.cpp  1877.cpp  1880.cpp  1893.cpp  1910.cpp  1924.cpp  1991.cpp  2001.cpp  2012.cpp  2023.cpp  2066.cpp  2100.cpp  (+1 more)
